--- a/README
+++ b/README
@@ -1,4 +1,58 @@
-RECIPES
-["apps4", "controllers", "core", "deployment", "email", "extras", "frontend", "gems", "git", "init", "models", "prelaunch", "railsapps", "readme", "routes", "saas", "setup", "testing", "tests4", "views"]
-PREFERENCES
-{:git=>true, :apps4=>"none", :dev_webserver=>"webrick", :prod_webserver=>"same", :database=>"postgresql", :templates=>"haml", :tests=>"none", :frontend=>"bootstrap3", :email=>"none", :authentication=>"devise", :devise_modules=>"default", :authorization=>"pundit", :form_builder=>"simple_form", :starter_app=>"admin_app"}
+Document Flow
+========================
+
+This application was generated with the rails_apps_composer gem:
+https://github.com/RailsApps/rails_apps_composer
+provided by the RailsApps Project:
+http://railsapps.github.io/
+
+________________________
+
+Recipes:
+
+* apps4
+* controllers
+* core
+* deployment
+* email
+* extras
+* frontend
+* gems
+* git
+* init
+* models
+* prelaunch
+* railsapps
+* readme
+* routes
+* saas
+* setup
+* testing
+* tests4
+* views
+
+Preferences:
+
+* git: true
+* apps4: none
+* dev_webserver: webrick
+* prod_webserver: same
+* database: postgresql
+* templates: haml
+* tests: none
+* frontend: bootstrap3
+* email: none
+* authentication: devise
+* devise_modules: default
+* authorization: pundit
+* form_builder: simple_form
+* starter_app: admin_app
+* rvmrc: false
+* quiet_assets: true
+* ban_spiders: true
+* github: true
+* deployment: capistrano3
+
+________________________
+
+License
